structmeta-tests/tests/compile_fail/parse/mismatch_delimiter_struct.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/parse/mismatch_delimiter_struct.rs:6:5
  |
6 |     braket_token: syn::token::Bracket,
  |     ^^^^^^^^^^^^  ------------------- expected due to this
  |     |
  |     expected `Bracket`, found `Paren`
